--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -9,7 +9,7 @@
                         <div class="yspanel-image-textbox">- <span class="text">{$info['name']}</span> -</div>
                         <img class="yspanel-image-image" src="{$info['imglist']}">
                     </div>
-                    <div class="yspanel-content-box">
+                    <div class="yspanel-content-box2">
                         {$info['intro']}
                     </div>
                 </a>
