--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -100,6 +100,7 @@ a.yspanel,.yspanel > a{color: #333333;}
 .yspanel-image-textbox{position: absolute;z-index: 20;top: 50%;left: 50%;margin-top: -15px;margin-left: -60px;color: #fff;font-size: 20px;}
 .yspanel-image-textbox > .text{text-align: center;width: 120px;text-shadow:1px 1px 1px #666;display: inline-block;}
 .yspanel-content-box{padding: 0 10px;margin: 10px 0;}
+.yspanel-content-box2{padding: 10px;}
 .yspanel-titlebox{padding: 10px;font-size: 18px;}
 .yspanel-ysbtnlist{text-align: center;font-size: 18px;padding: 10px 0;}
 .ysbtn{border:solid 1px #aaa;padding: 5px 20px;border-radius: 50px; color: #666;}
@@ -121,5 +122,5 @@ a.btnitem{display: block;}
 }
 
 .swiper-slide-center-text{position: absolute;top:50%;left: 50%;color: #fff;font-size: 28px;width: 200px;line-height: 50px;margin-top: -25px;margin-left: -100px;text-align: center;text-shadow: 1px 1px 1px #666;}
-.fixbtnbox{position: fixed;right: 20px;bottom: 20px;}
-.fixbtn{display: block;width:50px;height: 50px;background: #00CC00;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;font-size: 16px;}
+.fixbtnbox{position: fixed;right: 20px;bottom: 40px;}
+.fixbtn{display: block;width:60px;height: 60px;background: #00CC00;border-radius: 80px;text-align: center;line-height: 60px;color: #fff;font-size: 24px;}
