--- a/Application/Phone/View/Miaoji/phoneCate.html
+++ b/Application/Phone/View/Miaoji/phoneCate.html
@@ -24,7 +24,9 @@
                 </div>
             </volist>
 
-            <include file="./Application/Phone/View/Miaoji/footer.html" />
+            <p class="gray-text1 text-center small-text margin-top30">
+                如果这店铺的内容有遗漏或者错误，请<a href="#" id="telmebtn">告诉我们</a>吧
+            </p>
         </div>
     </div>
 </block>
