--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -51,7 +51,9 @@
                 </div>
             </volist>
 
-            <include file="./Application/Phone/View/Miaoji/footer.html" />
+            <p class="gray-text1 text-center small-text margin-top30">
+                如果您知道更多有趣的，那就<a href="{:UC('Miaoji/editSuggest',array('cid',$_GET['id']}" id="telmebtn">告诉我们</a>吧
+            </p>
         </div>
     </div>
 </block>
