修复BUG和修改微信菜单

--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -15,7 +15,9 @@
                 </a>
             </volist>
 
+            <p class="gray-text1 text-center small-text margin-top30">
 
+            </p>
         </div>
     </div>
 </block>
