--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -52,7 +52,7 @@
             </volist>
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果您知道更多有趣的，那就<a href="{:UC('Miaoji/editSuggest',array('cid',$_GET['id']}" id="telmebtn">告诉我们</a>吧
+                如果您知道更多有趣的，那就<a href="{:UC('Miaoji/editSuggest',array('cid',$_GET['id']))}" id="telmebtn">告诉我们</a>吧
             </p>
         </div>
     </div>
