--- a/Application/Phone/View/Miaoji/phoneList.html
+++ b/Application/Phone/View/Miaoji/phoneList.html
@@ -13,7 +13,7 @@
             </volist>
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果您知道更多便民电话，那就<a href="{:UC('Miaoji/editSuggest',array('cid',9}" id="telmebtn">告诉我们</a>吧
+                如果您知道更多便民电话，那就<a href="{:UC('Miaoji/editSuggest',array('cid',9))}" id="telmebtn">告诉我们</a>吧
             </p>
 
         </div>
