--- a/Application/Phone/View/Miaoji/phoneList.html
+++ b/Application/Phone/View/Miaoji/phoneList.html
@@ -1,7 +1,11 @@
 <extend name="template/temp" />
 <block name="content">
     <div class="page" id="showcase">
-        <div class="content native-scroll">
+        <div class="content native-scroll pull-to-refresh-content">
+            <div class="pull-to-refresh-layer">
+                <div class="preloader"></div>
+                <div class="pull-to-refresh-arrow"></div>
+            </div>
             <p class="gray-text1 text-center">北流便民电话</p>
             <volist name="list" id="info">
                 <a class="yspanel margin-top30" href="{:UC('Miaoji/phoneCate',array('id'=>$info['id']))}">
