图片提示，文字提示

--- a/Application/Phone/View/Miaoji/editSuggest.html
+++ b/Application/Phone/View/Miaoji/editSuggest.html
@@ -3,6 +3,11 @@
 <block name="content">
     <div class="page page-current" id="editSuggest">
         <div class="content native-scroll">
+
+            <div class="branch-box">
+                <h3>谢谢提供店铺信息</h3>
+                <p>为了让更多人知道店铺，请尽可能多填写哦</p>
+            </div>
             <form method="post" action="{:UC('Miaoji/editSuggestCommit')}" id="form">
                 <div class="weui_cells_title">店铺名称</div>
                 <div class="weui_cells weui_cells_form">
@@ -62,7 +67,7 @@
                     </div>
                 </div>
 
-                <div class="weui_cells_title">定位（如果你就在店铺里，就点击定位吧）</div>
+                <div class="weui_cells_title">定位（如果你在店铺里就点击 定位 ，如不在则不点击）</div>
                 <div class="weui_cells weui_cells_form">
                     <div class="weui_cell">
                         <div class="weui_cell_bd weui_cell_primary">
