修复一些问题

--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -37,7 +37,7 @@
                                 <i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span>
                             </a>
                             <else/>
-                            <a class="btnitem ysbtn flex-1" id="likebtn" data-id="{$info['id']}">
+                            <a class="btnitem ysbtn flex-1 likebtn" data-id="{$info['id']}">
                                 <i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span>
                             </a>
                         </if>
