--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -40,7 +40,7 @@
                                 <if condition="$info['isLike']">
                                     <a class="ysbtn hover" data-id="{$info['id']}"><i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span></a>
                                     <else/>
-                                    <a class="ysbtn" id="likebtn" data-id="{$info['id']}"><i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span></a>
+                                    <a class="ysbtn likebtn" data-id="{$info['id']}"><i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span></a>
                                 </if>
 
                             </div>
