--- a/Application/Phone/View/Miaoji/editSuggest.html
+++ b/Application/Phone/View/Miaoji/editSuggest.html
@@ -50,7 +50,7 @@
                             <input class="weui_input" type="text"
                                    placeholder="电话"
                                    name="phone"
-                                   required minlength="11" maxlength="11">
+                                   minlength="7" maxlength="11">
                         </div>
                     </div>
                 </div>
