--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -41,7 +41,9 @@
                                 <i class="iconfont">&#xe608;</i> <span>{$info['likecount']}</span>
                             </a>
                         </if>
-
+                    </div>
+                    <div class="content-block">
+                        <a href="tel:{$info['phone']}" class="weui_btn weui_btn_primary">拨打电话</a>
                     </div>
                     <div class="margin-top"></div>
                     <table class="ystable table table-bordered">
@@ -75,7 +77,7 @@
             </div>
 
             <div class="fixbtnbox">
-                <a class="fixbtn" href="tel:{$info['phone']}"><i class="iconfont">&#xe606;</i></a>
+                <a class="fixbtn showMenu" href="#"><i class="iconfont">&#xe602;</i></a>
             </div>
 
             <div class="mask hide">
