商户后台改回来了

--- a/Application/Phone/View/Shop/index.html
+++ b/Application/Phone/View/Shop/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <div class="hd">
                 <h1 class="page-title">
-                    一妙集
+                    {$shopName}
                 </h1>
                 <p class="page-desc">欢迎回来，{$nickName}</p>
             </div>
