--- a/Application/Phone/View/Activity/showAllActivity.html
+++ b/Application/Phone/View/Activity/showAllActivity.html
@@ -9,7 +9,7 @@
             <p class="gray-text1 text-center">北流特惠活动</p>
             <volist name="list" id="info">
                 <div class="yspanel margin-top30">
-                    <a href="{:UC('Miaoji/detail',array('id'=>$info['id']))}">
+                    <a href="{:UC('Activity/activityInfo',array('id'=>$info['id']))}">
                         <div class="yspanel-titlebox flex">
                             <div class="flex-1">
                                 {$info['shopname']}
