--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -10,7 +10,7 @@
                 <div class="banner-header-imgbox">
                     <img src="{$info['piclist']}"
                          class="showimglist"
-                         data-imglist="<?php echo implode(',',$info['imglist']);?>"
+                         data-imglist="<?php echo implode(',',$info['piclist']);?>"
                          alt="" style="width: 100%">
 
                 </div>
