--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -156,7 +156,7 @@ a.btnitem{display: block;}
 
 .activity-intro{margin-top: 15px;color: #666666;}
 .activity-goodslist-box{margin-top: 15px;border-top: 2px solid #aaa;}
-.activity-goods-box{margin-top: 5px;}
+.activity-goods-box{border-bottom: 1px solid #dddddd;padding: 10px 0;}
 .activity-goods-img{width: 120px;height:150px;margin-right: 10px;}
 .activity-goods-infobox .price{background: #eee;padding: 10px;margin-top: 5px;}
 .activity-goods-infobox .price .price-value{color: #990073;}
