--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -8,7 +8,7 @@
             </div>
             <div class="yspanel">
                 <div class="banner-header-imgbox">
-                    <img src="{$info['piclist']}"
+                    <img src="http://media.dianduoduo.top/activity/20120312134858418.jpg"
                          class="showimglist"
                          data-imglist="<?php echo implode(',',$info['piclist']);?>"
                          alt="" style="width: 100%">
