--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -1,6 +1,6 @@
 <extend name="template/temp" />
 <block name="content">
-    <div class="page" id="detail">
+    <div class="page" id="activityInfo">
         <div class="content native-scroll pull-to-refresh-content">
             <div class="pull-to-refresh-layer">
                 <div class="preloader"></div>
@@ -8,7 +8,7 @@
             </div>
             <div class="yspanel">
                 <div class="banner-header-imgbox">
-                    <img src="http://media.dianduoduo.top/activity/20120312134858418.jpg"
+                    <img src="{$info['piclist'][0]}"
                          class="showimglist"
                          data-imglist="<?php echo implode(',',$info['piclist']);?>"
                          alt="" style="width: 100%">
@@ -17,47 +17,63 @@
                 <div class="yspanel-content-box">
                     <div class="activity-box">
                         <div class="activity-title-box">
-                            <h3>五一特价优惠活动</h3>
-                            <div class="chashi">——百惠超市</div>
+                            <h3>{$info['name']}</h3>
+                            <div class="chashi">——{$info['shopname']}</div>
                         </div>
                         <div class="activity-lefttime-box">
                             <span class="label">剩余时间:</span>
-                            <span class="countdown">12小时</span>
+                            <span class="countdownbox">{$info['lefttime']}小时</span>
                         </div>
+
                         <div class="row activity-btngroup">
                             <div class="col-50">
-                                <a class="activity-btn share" href="#">分享</a>
+                                <a class="activity-btn share" id="shareBtn" href="#"><i class="iconfont">&#xe609;</i>分享</a>
                             </div>
                             <div class="col-50">
-                                <a class="activity-btn like" href="#">喜欢</a>
+                                <if condition="$info['isLike']">
+                                    <a class="activity-btn like" href="javascript:;" data-id="{$info['id']}">
+                                        <i class="iconfont">&#xe60c;</i>喜欢
+                                        <span>({$info['likecount']})</span>
+                                    </a>
+                                    <else/>
+                                    <a class="activity-btn like likebtn" href="javascript:;" data-id="{$info['id']}">
+                                        <i class="iconfont">&#xe608;</i>喜欢
+                                        <span>({$info['likecount']})</span>
+                                    </a>
+                                </if>
+
                             </div>
                         </div>
                         <div class="activity-intro">
-                            百惠超市特价大礼包，尽情广大新老顾客前来购买，大特价大实惠。
+                            {$info['intro']}
                         </div>
                     </div>
                     <div class="activity-goodslist-box">
-                        <div class="activity-goods-box flex">
-                            <img class="activity-goods-img" src="__PUBLIC__/images/yuan4.png" />
-                            <div class="activity-goods-infobox flex-1">
-                                <h3>本地番茄</h3>
-                                <div class="price">价格：<span class="price-value">2元/斤</span></div>
-                                <div class="gray-text text-line3 intro">数量有限，早来早得。买三斤送两斤。买三斤送两斤。买三斤送两斤。买三斤送两斤。</div>
-                            </div>
-                        </div>
-                        <div class="activity-goods-box flex">
-                            <img class="activity-goods-img" src="__PUBLIC__/images/yuan9.png" />
-                            <div class="activity-goods-infobox flex-1">
-                                <h3>本地草莓</h3>
-                                <div class="price">价格：<span class="price-value">5元/斤</span></div>
-                                <div class="gray-text text-line3 intro">数量有限，早来早得</div>
-                            </div>
-                        </div>
+                        <empty name="goodsList">
+                            <div class="text-center margin-top30 gray-text">没有活动商品</div>
+                            <else/>
+                            <volist name="goodsList" id="goodsinfo">
+                                <div class="activity-goods-box flex">
+                                    <img class="activity-goods-img" src="__PUBLIC__/images/yuan4.png" />
+                                    <div class="activity-goods-infobox flex-1">
+                                        <h3>{$goodsinfo['name']}</h3>
+                                        <div class="price">价格：<span class="price-value">{$goodsinfo['price']}</span></div>
+                                        <div class="gray-text text-line3 intro">{$goodsinfo['intro']}</div>
+                                    </div>
+                                </div>
+                            </volist>
+                        </empty>
+
                     </div>
 
                 </div>
 
             </div>
+
+            <script>
+                var shareIntro = "{$share.intro}";
+                var shareTitle = "{$share.title}";
+            </script>
 
             <div class="fixbtnbox">
                 <a class="fixbtn showMenu" href="#"><i class="iconfont">&#xe602;</i></a>
@@ -72,7 +88,7 @@
             </div>
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果这店铺的内容有遗漏或者错误，请<a href="#" id="telmebtn">告诉我们</a>吧
+                <a href="{:UC('Public/showMa')}" id="telmebtn">关注我们</a>将获得北流更多优惠信息
             </p>
         </div>
     </div>
