--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -35,11 +35,11 @@ body{background: #eee;font-size: 14px;}
 .iconfont{font-family:"iconfont";font-style:normal;}
 @font-face {
     font-family: 'iconfont';
-    src: url('//at.alicdn.com/t/font_1458787251_2178557.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/font_1458787251_2178557.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/font_1458787251_2178557.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/font_1458787251_2178557.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/font_1458787251_2178557.svg#iconfont') format('svg'); /* iOS 4.1- */
+    src: url('//at.alicdn.com/t/font_1460772863_0033567.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1460772863_0033567.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1460772863_0033567.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1460772863_0033567.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1460772863_0033567.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .flex{
@@ -147,7 +147,7 @@ a.btnitem{display: block;}
 
 .activity-lefttime-box{margin-top: 15px;text-align: center;font-size: 16px;font-weight: bolder;}
 .activity-lefttime-box .label{}
-.activity-lefttime-box .countdown{color: #990073;}
+.activity-lefttime-box .countdownbox{color: #990073;}
 
 .activity-btngroup{margin-top: 15px;}
 .activity-btn{display: block;width: 100%;padding: 10px;text-align: center;border-radius: 5px;color: #fff;}
