--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -37,8 +37,7 @@
                                     </a>
                                     <else/>
                                     <a class="activity-btn like likebtn" href="javascript:;" data-id="{$info['id']}">
-                                        <i class="iconfont">&#xe608;</i>喜欢
-                                        <span>({$info['likecount']})</span>
+                                        <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
                                     </a>
                                 </if>
 
