--- a/Application/Phone/View/Activity/showAllActivity.html
+++ b/Application/Phone/View/Activity/showAllActivity.html
@@ -6,7 +6,7 @@
                 <div class="preloader"></div>
                 <div class="pull-to-refresh-arrow"></div>
             </div>
-            <p class="gray-text1 text-center">北流特惠活动</p>
+            <p class="gray-text1 text-center">{$pageTitle}</p>
             <volist name="list" id="info">
                 <div class="yspanel margin-top30">
                     <a href="{:UC('Activity/activityInfo',array('id'=>$info['id']))}">
