--- a/Application/Phone/View/Public/about.html
+++ b/Application/Phone/View/Public/about.html
@@ -19,19 +19,13 @@
                             <section>
                                 <h3>我们想改变小城市</h3>
                                 <p>
-                                    说明大小城市在移动互联网方面的差距
-                                    说明我们有能力改变这种情况
-
-                                    要求语言平实，引人共鸣。通过说明大小城市在移动互联网方面的差距，突出小城市的互联网设施的落后和欠缺，
-                                    最后推出我们改造小城市互联网设施的意图。
-
-
-                                    在大城市生活的时候，我们能时时刻刻感受到移动互联网带来的便利。
-                                    通过手机，我们能在如此拥挤，庞大的大城市中找到最好吃的餐馆。
-                                    通过手机，我们能在
-                                    想吃东西的时候，我们总能知道方圆几公里内最好吃的餐馆。
-                                    想去游玩的时候，想去找工作的时候……只要我们拿起手机，就可以了解到最丰富，最合适，最新鲜的信息。
-                                    而这一切在小城市里都是没有的……
+                                    在大城市生活的时候，我们能时时刻刻感受到手机互联网带来的便利。
+                                    当我们工作到饥肠辘辘的时候，打开手机就可以看到整个城市的各类美食，经过挑选、支付后，不出10分钟美餐就送到了身边。
+                                    周末如果打算出游，我们能在前一天晚上通过手机获取到景点的路线和出游攻略，然后手机支付几张门票，便可以躺在床上期待明天的旅程。
+                                    寻找一份更好的工作、住处，也不算是一件费劲的事情，手机里的“赶集网”、“58同城”等各类软件就有了大量信息等我们来看。
+                                    而在小城市里，这一切都还欠缺……
+                                    小城市的科技发展步伐似乎总是慢大城市一步。不过，我们想试着改变这一切。
+                                    我们想要把小城市的各类信息，通过微信，比如商店里的特惠信息
                                 </p>
                             </section>
                             <section>
