--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -37,7 +37,7 @@
                                       name="address"
                                       required
                                       rows="3"></textarea>
-                            <div class="weui_textarea_counter"><span>0</span>/200</div>
+                            <div class="weui_textarea_counter">最多200字</div>
                         </div>
                     </div>
                     <div class="weui_cell">
