--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -40,11 +40,13 @@
                                         <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
                                     </a>
                                 </if>
-
                             </div>
                         </div>
                         <div class="activity-intro">
                             {$info['intro']}
+                        </div>
+                        <div class="address-box">
+                            地址：{$info['address']}
                         </div>
                     </div>
                     <div class="activity-goodslist-box">
