--- a/Application/Phone/View/Shop/index.html
+++ b/Application/Phone/View/Shop/index.html
@@ -37,6 +37,14 @@
                             店铺
                         </p>
                     </a>
+                    <a href="{:UC('Shop/activity')}" class="weui_grid js_grid" data-no-cache="true">
+                        <div class="weui_grid_icon">
+                            <img src="__PUBLIC__/images/iconfont-ji.png" alt="">
+                        </div>
+                        <p class="weui_grid_label">
+                            活动
+                        </p>
+                    </a>
                     <a href="{:UC('Shop/collection')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-ji.png" alt="">
