--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -41,12 +41,13 @@
                         </div>
                     </div>
                     <div class="weui_cell">
-                        <div class="weui_cell_hd"><label class="weui_label">手机</label></div>
+                        <div class="weui_cell_hd"><label class="weui_label">电话</label></div>
                         <div class="weui_cell_bd weui_cell_primary">
                             <input class="weui_input"
                                    type="number"
+                                   name="phone"
                                    required
-                                   placeholder="请输入手机">
+                                   placeholder="为了让顾客能联系上您，请填写座机或手机号码">
                         </div>
                     </div>
                 </div>
