--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -28,10 +28,10 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="number"
-                               placeholder="请输入商品价格"
+                        <input class="weui_input" type="text"
+                               placeholder="格式如： 5元/斤，2元/个，3元/张 等"
                                name="price" value="{$goodsDetail['price']}"
-                               pattern="[0-9]*" required>
+                               required>
                     </div>
                 </div>
             </div>
