--- a/Application/Phone/View/template/shop_main.html
+++ b/Application/Phone/View/template/shop_main.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="__PUBLIC__/SUI-Mobile/dist/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=25">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=26">
 
     <block name="css"></block>
 
@@ -26,7 +26,11 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script src="__PUBLIC__/js/validator.min.js"></script>
-<script type='text/javascript' src="__PUBLIC__/js/main.js?v=8" charset='utf-8'></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+    var domain = "{$domain}";
+</script>
+<script type='text/javascript' src="__PUBLIC__/js/main.js?v=9" charset='utf-8'></script>
 <block name="script"></block>
 </body>
 </html>
