一些小改动

--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -47,7 +47,7 @@
                                    type="number"
                                    name="phone"
                                    required
-                                   placeholder="为了让顾客能联系上您，请填写座机或手机号码">
+                                   placeholder="请填写座机或手机号码">
                         </div>
                     </div>
                 </div>
